--- a/MovieSearch/Base.lproj/Main.storyboard
+++ b/MovieSearch/Base.lproj/Main.storyboard
@@ -1,25 +1,104 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="JdO-4q-yyV">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Table View Controller-->
+        <scene sceneID="cQB-0k-NDg">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <tableViewController id="ML0-bu-UXC" customClass="TableViewController" customModule="MovieSearch" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="303" sectionHeaderHeight="28" sectionFooterHeight="28" id="crz-Ik-okh">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Search" id="9wN-fM-FPA">
+                            <rect key="frame" x="0.0" y="64" width="600" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits" returnKeyType="search"/>
+                        </searchBar>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="movieCell" rowHeight="303" id="GEo-ud-Uv8" customClass="TableViewCell" customModule="MovieSearch" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="136" width="600" height="303"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="GEo-ud-Uv8" id="4Sp-z1-zct">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="302"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Pn-Id-J5H">
+                                            <rect key="frame" x="271" y="8" width="59" height="27"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tga-m0-2qq">
+                                            <rect key="frame" x="276" y="43" width="49" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YP8-Vu-BUW">
+                                            <rect key="frame" x="256" y="72" width="88" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YeY-jk-u3N">
+                                            <rect key="frame" x="8" y="101" width="584" height="193"/>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="YeY-jk-u3N" secondAttribute="bottom" constant="8" id="FkP-R5-XG6"/>
+                                        <constraint firstItem="YP8-Vu-BUW" firstAttribute="centerX" secondItem="4Sp-z1-zct" secondAttribute="centerX" id="KPn-2g-pdp"/>
+                                        <constraint firstItem="Tga-m0-2qq" firstAttribute="top" secondItem="2Pn-Id-J5H" secondAttribute="bottom" constant="8" id="NgG-OO-dKh"/>
+                                        <constraint firstItem="2Pn-Id-J5H" firstAttribute="centerX" secondItem="4Sp-z1-zct" secondAttribute="centerX" id="QAF-vv-39h"/>
+                                        <constraint firstItem="YP8-Vu-BUW" firstAttribute="top" secondItem="Tga-m0-2qq" secondAttribute="bottom" constant="8" id="Vbw-VH-0HK"/>
+                                        <constraint firstItem="YeY-jk-u3N" firstAttribute="centerX" secondItem="4Sp-z1-zct" secondAttribute="centerX" id="hNL-a5-ozG"/>
+                                        <constraint firstItem="2Pn-Id-J5H" firstAttribute="top" secondItem="4Sp-z1-zct" secondAttribute="top" constant="8" id="o1y-4G-dXG"/>
+                                        <constraint firstItem="YeY-jk-u3N" firstAttribute="top" secondItem="YP8-Vu-BUW" secondAttribute="bottom" constant="8" id="snQ-Dy-UTI"/>
+                                        <constraint firstItem="Tga-m0-2qq" firstAttribute="centerX" secondItem="4Sp-z1-zct" secondAttribute="centerX" id="xgw-1q-2et"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="descriptionLabel" destination="YP8-Vu-BUW" id="yds-f6-KxD"/>
+                                    <outlet property="nameLabel" destination="2Pn-Id-J5H" id="mQf-Fz-PTK"/>
+                                    <outlet property="posterImageView" destination="YeY-jk-u3N" id="h5m-Ch-qc1"/>
+                                    <outlet property="ratingLabel" destination="Tga-m0-2qq" id="lDf-Oh-SeL"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="ML0-bu-UXC" id="EIl-xR-UoC"/>
+                            <outlet property="delegate" destination="ML0-bu-UXC" id="xG2-35-Uru"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="22R-82-JV5"/>
+                    <connections>
+                        <outlet property="searchBar" destination="9wN-fM-FPA" id="uok-Jk-28g"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9G4-tc-xF7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1163" y="438"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="2xH-Hw-Dpu">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="JdO-4q-yyV" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="vDM-yg-NCc">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ML0-bu-UXC" kind="relationship" relationship="rootViewController" id="UgQ-eA-dCy"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="A5Q-l6-epi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="351" y="438"/>
         </scene>
     </scenes>
 </document>
